# mdformat-footnote

./: .gitignore  .pre-commit-config.yaml  .pre-commit-test.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: tests.yml
mdformat_footnote/: __init__.py  plugin.py
mdformat_pelican/: plugin.py
tests/: fixtures.md  pre-commit-test.md  test_fixtures.py  test_word_wrap.py
