[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "mdformat_footnote"
author = "Gaige B. Paulsen"
author-email = "gaige@cluetrust.com"
description-file = "README.md"
home-page = "https://github.com/gaige/mdformat-footnote"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = "mdformat,markdown,markdown-it"

requires-python=">=3.6"
requires=["mdformat >=0.5.3,<0.6.0",
          "mdit-py-plugins",
            ]

[tool.flit.metadata.requires-extra]
test = [
    "pytest~=6.0",
    "coverage",
    "pytest-cov",
]
dev = ["pre-commit"]

[tool.flit.entrypoints."mdformat.parser_extension"]
footnote = "mdformat_footnote"

[tool.flit.sdist]
include = []
exclude = [".github/", "tests/"]

[tool.isort]
skip = ["venv"]
# Force imports to be sorted by module, independent of import type
force_sort_within_sections = true
# Group first party and local folder imports together
no_lines_before = ["LOCALFOLDER"]

# Configure isort to work without access to site-packages
known_first_party = ["mdformat_footnote", "tests"]

# Settings for Black compatibility
profile = "black"
